# rust-app-scraper

./: Cargo.toml
src/: getter.rs  main.rs
